--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,9 @@
   flex-wrap: wrap;
 }
 .container-photo-video {
-  width: 90%;
-  margin-right: 30px;
-  margin-left: 30px;
+  width: calc(50% - 20px);
+  margin-right: 10px;
+  margin-left: 10px;
 
   > div {
     cursor: pointer;
